add footer and color scheme to index.html

--- a/index.html
+++ b/index.html
@@ -16,25 +16,23 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div id="header-details" class="row">
+            <div class="row">
                 <div class="col-xl-2">
                 </div>         
-                <div class="col-xl-4">
-                    <div class="col heading">
-                        <h1 class="title">All About Autism</h1>                        
+                <div class="col-xl-8">
+                    <div>
+                        <h1 class="title">All About Autism<span>                        
+                        <img class="logo-img" src="assets/images/jigsaw piece.png"
+                        alt="Autism Jigsaw Logo"
+                        aria-label="Multicoloured Jigsaw piece."></span></h1>
                     </div>
-                </div>
-                <div class="col-xl-2">
                 </div> 
-                <div class="col-xl-2">
-                    <img class="img-responsive" src="assets/images/jigsaw piece.png"
-                     alt="Autism Jigsaw Logo"
-                     aria-label="Multicoloured Jigsaw piece.">
-                </div>
-                <div class ="col-12">
-                    <div class="row no-gutters solid-border">
-                        <div class="col-12">                 
-                            <ul id="nav" class="list-inline menucontainer menu-spacing">                        
+            </div>
+        </div>
+        <div class="container-fluid">     
+            <div class="row">  
+                <div class="col-12">                 
+                    <ul id="nav" class="list-inline menucontainer menu-spacing">                        
                                 <li class="ui-menu-color list-inline-item">
                                 <a href="index.html" class="hvr-grow active" aria-label="This is the current page, home" ><i class ="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                                 </li>
@@ -42,22 +40,77 @@
                                 <a href="#" class="hvr-grow" aria-label="Go to the Myth Buster page (opens in a new tab)"><i class ="fa fa-suitcase" aria-hidden="true"></i><span>Myths</span></a>
                                 </li>
                                 <li class="ui-menu-color list-inline-item">
-                                <a href="#" class="hvr-grow" aria-label="Go to the quiz page (opens in a new tab)"><i class ="fa-regular fa-image" aria-hidden="true"></i><span>Quiz</span></a>
+                                <a href="#" class="hvr-grow" aria-label="Go to the quiz page (opens in a new tab)"><i class ="fa-solid fa-question" aria-hidden="true"></i><span>Quiz</span></a>
                                 </li>
                                 <li class="ui-menu-color list-inline-item">
                                 <a href="#" class="hvr-grow" aria-label="Go to the comments page (opens in a new tab)"><i class ="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                                 </li>                          
-                            </ul>
-                        </div>
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>   
     </header>
     <main>
-    <section>
-
-    </section>    
+        <section>
+            <div class="container-fluid">
+                <div class="row section-details no-gutters solid-border">
+    <!-- page ident -->    
+                    <br>
+                    <div class ="col-xl-3">
+                    </div>
+                    <div class="col-xl-6">
+                        <h2 class="general-sub">The History</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
+                    </div>
+                </div>
+            </div>
+    <!-- start of main page content -->
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-xl-1">
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col heading">                            
+                                <h2 class="sub-title">autism</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col heading">                            
+                                <h2 class="sub-title">and autism</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col">                            
+                                <h2 class="sub-title">more autism</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias quis accusantium consequuntur quae distinctio architecto, necessitatibus iusto, voluptatem nobis soluta laboriosam incidunt esse doloribus, ut praesentium mollitia. Voluptate, harum.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, hic molestiae maiores ullam inventore nulla voluptatibus sint fugiat eum voluptate repellat odio repudiandae libero modi vero? Reiciendis modi error accusamus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>                          
+                </div>            
+            </div>      
+        </section>  
 
 
 
@@ -65,11 +118,55 @@
 
     </main>
     <footer>
-
-
-
-    </footer>
-
+ <!-- direct email or link to comments page -->
+ <div class="container-fluid">
+    <div id="footer-details" class="row no-gutters solid-border">
+        <div class="col-sm-6">
+            <h3 class="uppercase foot-title">Contact</h3>
+            <br>
+            <p class="inline-block foot-email">                    
+                <a href="comments.html" class="hvr-grow" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+            </p>
+        </div>
+<!-- Social Media Links   -->
+        <div class="col-sm-6">
+            <h3 class="uppercase foot-title">Social</h3>
+            <ul class="list-inline social-links">
+                <li class="list-inline-item">
+                    <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="https://x.com/Autism?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" aria-label="Go to my Twitter X account (opens in a new tab)" class="hvr-grow">
+                        <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="https://uk.linkedin.com/company/national-autistic-society" aria-label="Go to my LinkedIn page (opens in a new tab)" class="hvr-grow">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <span class="sr-only">LinkedIn</span>
+                    </a>
+                </li>                     
+                <li class="list-inline-item">
+                    <a target="_blank" href="https://www.youtube.com/user/nationalautisticsoc" aria-label="Go to my Youtube channel (opens in a new tab)" class="hvr-grow">
+                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                        <span class="sr-only">YouTube</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a target="_blank" href="https://www.autism.org.uk/" aria-label="Go to the national autistic society web site (opens in a new tab)" class="hvr-grow">
+                        <i class="fa-brands fa-internet-explorer" aria-hidden="true"></i>
+                        <span class="sr-only">Vimeo</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+</footer>
     <script src="assets/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6e6c671d1b.js" crossorigin="anonymous"></script>
