correct color and font of footer comments

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
  <div class="container-fluid">
     <div id="footer-details" class="row no-gutters solid-border">
         <div class="col-sm-6">
-            <h3 class="uppercase foot-title">Contact</h3>
-            <br>
-            <p class="inline-block foot-email">                    
-                <a href="comments.html" class="hvr-grow" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+            <h3 class="uppercase sub-title">Contact</h3>
+            <p class="sub-title">                    
+                <a href="comments.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
             </p>
+            <br>
         </div>
 <!-- Social Media Links   -->
         <div class="col-sm-6">
-            <h3 class="uppercase foot-title">Social</h3>
+            <h3 class="uppercase sub-title">Social</h3>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://www.facebook.com/NationalAutisticSociety/?locale=en_GB" aria-label="Go to my Facebook page (opens in a new tab)" class="hvr-grow">
