add color scheme and functionality to menu buttons on index.html

--- a/index.html
+++ b/index.html
@@ -14,42 +14,32 @@
     <title>All About Autism</title>
 </head>
 <body>
-    <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-2">
-                </div>         
-                <div class="col-xl-8">
-                    <div>
-                        <h1 class="title">All About Autism<span>                        
-                        <img class="logo-img" src="assets/images/jigsaw piece.png"
+    <header class="container">
+    <div class="header">    
+        <div class="row">
+            <div class="col-12">
+                <div>
+                    <h1 class="title">All About Autism<span>                        
+                    <img class="logo-img" src="assets/images/jigsaw_piece.png"
                         alt="Autism Jigsaw Logo"
-                        aria-label="Multicoloured Jigsaw piece."></span></h1>
-                    </div>
-                </div> 
-            </div>
-        </div>
-        <div class="container-fluid">     
-            <div class="row">  
-                <div class="col-12">                 
-                    <ul id="nav" class="list-inline menucontainer menu-spacing">                        
-                                <li class="ui-menu-color list-inline-item">
-                                <a href="index.html" class="hvr-grow active" aria-label="This is the current page, home" ><i class ="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
-                                </li>
-                                <li class="ui-menu-color list-inline-item">
-                                <a href="#" class="hvr-grow" aria-label="Go to the Myth Buster page (opens in a new tab)"><i class ="fa fa-suitcase" aria-hidden="true"></i><span>Myths</span></a>
-                                </li>
-                                <li class="ui-menu-color list-inline-item">
-                                <a href="#" class="hvr-grow" aria-label="Go to the quiz page (opens in a new tab)"><i class ="fa-solid fa-question" aria-hidden="true"></i><span>Quiz</span></a>
-                                </li>
-                                <li class="ui-menu-color list-inline-item">
-                                <a href="#" class="hvr-grow" aria-label="Go to the comments page (opens in a new tab)"><i class ="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
-                                </li>                          
-                    </ul>
+                    aria-label="Multicoloured Jigsaw piece."></span></h1>
                 </div>
+            </div> 
+        </div>
+        <div class="row bottom-pad">
+            <div class="center">
+    <!-- button colors to replicate the Autism jigsaw logo -->
+              <a class="btn btn-lg active btn-info" aria-pressed="true" aria-label="This is the current page, home" href="index.html">Home</a>
+              <a class="btn btn-lg btn-danger" aria-label="Go to the Myth Buster page (opens in a new tab)"" href="myth.html">Myths</a>
+              <a class="btn btn-lg btn-primary" aria-label="Go to the quiz page (opens in a new tab)"" href="quiz.html">Quiz</a>
+              <a class="btn btn-lg btn-warning" aria-label="Go to the contacts page (opens in a new tab)"" href="contact.html">Contact</a>
             </div>
-        </div>   
+        </div>    
+    </div>
     </header>
+ 
+ <!-- start of main content -->
+
     <main>
         <section>
             <div class="container-fluid">
@@ -59,7 +49,7 @@
                     <div class ="col-xl-3">
                     </div>
                     <div class="col-xl-6">
-                        <h2 class="general-sub">The History</h2>
+                        <h2 class="sub-title">The History</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
                     </div>
                 </div>
@@ -124,7 +114,7 @@
         <div class="col-sm-6">
             <h3 class="uppercase sub-title">Contact</h3>
             <p class="sub-title">                    
-                <a href="comments.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
+                <a href="contact.html" class="hvr-grow purple-text" aria-label="go to my comments, feedback page (opens in a new tab)">Go To The Commments Page</a>
             </p>
             <br>
         </div>
