add template content to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="All About Autism website">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css">
+<!-- third party css to allow half columns -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hoomanbahreini/bootstrap-half-and-quarter-grid/fractional-grid.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
@@ -43,8 +45,7 @@
     <main>
         <section>
             <div class="container-fluid">
-                <div class="row section-details no-gutters solid-border">
-    <!-- page ident -->    
+                <div class="row section-details no-gutters solid-border">  
                     <br>
                     <div class ="col-xl-3">
                     </div>
@@ -55,14 +56,15 @@
                 </div>
             </div>
     <!-- start of main page content -->
+     <!-- first 3 entries -->
             <div class="container-fluid">
                 <div class="row no-gutters section-details">        
-                    <div class="col-xl-1">
+                    <div class="col-xl-1-half">
                     </div>
                     <div class="col-xl-3">
                         <div class="row">
-                            <div class="col heading">                            
-                                <h2 class="sub-title">autism</h2>
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">autism 1</h2>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
                                 </p>
@@ -74,8 +76,8 @@
                     </div>
                     <div class="col-xl-3">
                         <div class="row">
-                            <div class="col heading">                            
-                                <h2 class="sub-title">and autism</h2>
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">and autism 1</h2>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
                                 </p>
@@ -87,8 +89,8 @@
                     </div>
                     <div class="col-xl-3">
                         <div class="row">
-                            <div class="col">                            
-                                <h2 class="sub-title">more autism</h2>
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">more autism 1</h2>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias quis accusantium consequuntur quae distinctio architecto, necessitatibus iusto, voluptatem nobis soluta laboriosam incidunt esse doloribus, ut praesentium mollitia. Voluptate, harum.
                                 </p>
@@ -99,7 +101,112 @@
                         </div>
                     </div>                          
                 </div>            
-            </div>      
+            </div> 
+            <!-- next 3 entries -->
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-xl-1-half">
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">autism 2</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">and autism 2</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">more autism 2</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias quis accusantium consequuntur quae distinctio architecto, necessitatibus iusto, voluptatem nobis soluta laboriosam incidunt esse doloribus, ut praesentium mollitia. Voluptate, harum.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, hic molestiae maiores ullam inventore nulla voluptatibus sint fugiat eum voluptate repellat odio repudiandae libero modi vero? Reiciendis modi error accusamus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>                          
+                </div>            
+            </div> 
+            <!-- last 3 entries -->
+            <div class="container-fluid">
+                <div class="row no-gutters section-details">        
+                    <div class="col-xl-1-half">
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">autism 3</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">and autism 3</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni placeat nam minus magnam velit, quod fuga inventore, rerum, vitae veniam pariatur. Totam ab quae a culpa iure magnam, molestiae accusamus!.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. In velit molestiae illum laboriosam iure obcaecati labore quidem, tenetur provident asperiores harum placeat. Eos dolore dicta suscipit quaerat rerum ipsum molestiae!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="row">
+                            <div class="col-heading">                            
+                                <h2 class="sub-title">more autism 3</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum molestias quis accusantium consequuntur quae distinctio architecto, necessitatibus iusto, voluptatem nobis soluta laboriosam incidunt esse doloribus, ut praesentium mollitia. Voluptate, harum.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, hic molestiae maiores ullam inventore nulla voluptatibus sint fugiat eum voluptate repellat odio repudiandae libero modi vero? Reiciendis modi error accusamus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>                          
+                </div>            
+            </div> 
+    <!-- end of main data - now summarise -->
+            <div class="container-fluid">
+                <div class="row section-details">  
+                    <br>
+                    <div class ="col-xl-3">
+                    </div>
+                    <div class="col-xl-6">
+                        <h2 class="sub-title">Next Actions</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eius nihil voluptate ipsa, sapiente ullam dignissimos amet soluta facilis iure fuga illum facere nobis ea explicabo sint voluptatibus molestias odit?</p>
+                    </div>
+                </div>
+            </div>
+            
         </section>  
 
 
