add modal to contact.html, update banner images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">All About Autism<span>                        
-                    <img class="logo-img" src="assets/images/jigsaw_piece.png"
+                    <img class="logo-img" src="assets/images/infinity_logo.png"
                         alt="Autism Jigsaw Logo"
-                    aria-label="Multicoloured Jigsaw piece."></span></h1>
+                    aria-label="Multicoloured infinity figure of 8 logo."></span></h1>
                 </div>
             </div> 
         </div>
