--- a/myth.html
+++ b/myth.html
@@ -22,9 +22,9 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">Can you tell a Myth from Fact?<span>                        
-                    <img class="logo-img" src="assets/images/jigsaw_piece.png"
-                        alt="Autism Jigsaw Logo"
-                    aria-label="Multicoloured Jigsaw piece."></span></h1>
+                    <img class="logo-img" src="assets/images/butterfly.png"
+                        alt="Autism butterfly Logo"
+                    aria-label="Multicoloured butterfly in jigsaw pieces."></span></h1>
                 </div>
             </div> 
         </div>
