--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
             <div class="col-12">
                 <div>
                     <h1 class="title">Comments & Feedback<span>                        
-                    <img class="logo-img" src="assets/images/jigsaw_piece.png"
-                        alt="Autism Jigsaw Logo"
-                    aria-label="Multicoloured Jigsaw piece."></span></h1>
+                    <img class="logo-img" src="assets/images/heart_logo.png"
+                        alt="Autism heart Logo"
+                    aria-label="Multicoloured heart image with autism awareness caption."></span></h1>
                 </div>
             </div> 
         </div>
@@ -81,15 +81,15 @@
                     <div class="form-group">
                         <a id="start-of-form"></a>   
                         <label for="firstname">First Name:</label>
-                        <input type="text" name="fname" id="firstname" class="form-control" placeholder="First Name" required>
+                        <input type="text" name="fname" id="firstname" class="form-control" placeholder="First Name" required autocomplete="on">
                     </div>
                     <div class="form-group">
                         <label for="lastname">Surname:</label>
-                        <input type="text" name="lname" id="lastname" class="form-control" placeholder="Surname" required>
+                        <input type="text" name="lname" id="lastname" class="form-control" placeholder="Surname" required autocomplete="on">
                     </div>
                     <div class="form-group">
                         <label for="emailaddress">Email Address:</label>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required autocomplete="on">
                         <small id="emailhelp" class="form-text text-muted-wcag">We'll never share your email with anyone else</small>
                     </div>
                     <div class="form-group">
@@ -101,15 +101,40 @@
                     </div>
                     <div class="form-row text-center">
                         <div class="col">
-                            <button type="submit" class="btn btn-secondary hvr-grow">Message Me!</button>
+                            <button type="submit" class="btnbtn-secondary hvr-grow">Message Me!</button>
                         </div>                            
                     </div>  
                 </form>
                 <br>
-                <br>   
+                <br>
+<!-- The Modal -->
+                <div id="contact-Modal" class="modal">
+<!-- Modal content -->
+                    <div class="contact-modal-content">
+                        <h1 class="sub-title top-pad">All About Autism</h1>
+                        <div class ="center-img">
+                            <br>                       
+                            <img class="logo-img" src="assets/images/ribbon.png"
+                                alt="Autism Ribbon Logo"
+                            aria-label="Multicoloured Ribbon with autism awareness text.">
+                        </div>
+                        <br>
+                        <h2 class="sub-title">Thank You for taking the time to contact me</h2>
+                        <br>
+                        <h2 class="sub-title">Your message has been successfully sent</h2>
+                        <h2 class="sub-title">and I aim to respond within 48 Hours.</h2>
+                        <br>
+                        <br>
+                        <div class=" center-img">
+                        <button type="button" id="modCloseBtn" onclick="closeModal()" class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>   
             </div>
         </div>
     </div>
+
         </section>  
     </main>
 <!-- End of main content section -->
