fix modal close on button on contacts.html

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                         <br>
                         <br>
                         <div class=" center-img">
-                        <button type="button" id="modCloseBtn" onclick="closeModal()" class="btn btn-secondary modal-btn hvr-grow">Close</button>
+                        <button id="modCloseBtn" onclick="closeModal()" class="btn btn-secondary modal-btn hvr-grow">Close</button>
                         </div>
                     </div>
                     </div>
