add layout changes to index.html and menu buttons

--- a/whatif.html
+++ b/whatif.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12">
                 <div>
-                    <h1 class="title">All About Autism<span>                        
+                    <h1 class="title">Testing page<span>                        
                     <img class="logo-img" src="assets/images/infinity_logo.png"
                         alt="Autism Jigsaw Logo"
                     aria-label="Multicoloured infinity figure of 8 logo."></span></h1>
@@ -50,27 +50,18 @@
                     <div class ="col-xl-2">
                     </div>
                     <div class="col-xl-8">
-                        <h2 class="sub-title">What is Autism?</h2>
+                        <h2 class="sub-title">What if?</h2>
                         <div class="text-blue">
-                        <p class="text-blue">Autism is a lifelong developmental disability which affects how people communicate and interact with the world.
+                        <p >Autism is a lifelong developmental disability which affects how people communicate and interact with the world.
                              More than one in 100 people are on the autism spectrum and there are around 700,000 autistic adults and children in the UK.
                         </p>
-                        <p>Autism is a spectrum condition and affects people in different ways. Like all people, autistic people have their own strengths and weaknesses. 
-                           The definition of Autism has changed over time and continues to change.
-                       </p>
-                       <p>It is variously called Autism, The Autistic spectrum and Autism Spectrum Disorder (ASD). More recently 'Condition' (ASC) has been chosen instead of Disorder
-                         as the latter has negative connotations of disability.
-                       </p>
-                       <p>Similarly spectrum is often reapleced by constellation as spectrum implies a degree of severity across all digfficulties when in fact a person may be
-                         quite challenged in one area but excel in another.
-                       </p>
                        </div>
                     </div>
                 </div>
             </div>
     <!-- start of main page content -->
-     <!-- first 3 entries -->
-     <div class="container-fluid">
+
+    <div class="container-fluid">
         <div class="row no-gutters section-details">        
             <div class="col-sm-1 col-md-2">
             </div>
@@ -255,7 +246,8 @@
                 </div>
             </div>
         </div>              
-    </div>
+    </div> 
+        
     <!-- end of main data - now summarise -->
             <div class="container-fluid">
                 <div class="row section-details">  
@@ -264,13 +256,18 @@
                     </div>
                     <div class="col-xl-8">
                         <h2 class="sub-title">Want to learn more?</h2>
-                        <p class ="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
+                        <p class="text-blue">Head on to the next page <a href="myth.html">'Myths or fact'</a> to learn about the various and oft quoted incorrect understanding and beliefs 
                             about Autism. Alternatively or afterwards try <a href="quiz.html">The Quiz.</a></p>
-                            <br>
                     </div>
                 </div>
             </div>
+            
         </section>  
+
+
+
+
+
     </main>
     <footer>
  <!-- direct email or link to comments page -->
